--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         }
     ],
     "require": {
-        "fakerphp/faker": "^1.21",
         "symfony/polyfill-uuid": "^1.27"
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.21",
+        "roave/security-advisories": "dev-latest"
     }
 }
