Добавил библиотеку psr/container

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "test": "phpunit tests --testdox --colors"
     },
     "require": {
-        "symfony/polyfill-uuid": "^1.27"
+        "symfony/polyfill-uuid": "^1.27",
+        "psr/container": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.21",
