--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "require": {
         "symfony/polyfill-uuid": "^1.27",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "monolog/monolog": "^3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.21",
