--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require": {
         "symfony/polyfill-uuid": "^1.27",
         "psr/container": "^2.0",
-        "monolog/monolog": "^3.3"
+        "monolog/monolog": "^3.3",
+        "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.21",
